syntax = "proto3";

package message;

// Run protoc --gofast_out=. message.proto to generate message.pb.go

// Message models a single message that is supposed to get exchanged by the
// gossip network
message NetworkMessage {
    string FromPeerID = 1;
    repeated string TargetPeerIDs = 2;
    string ProtocolID = 3;
    string ModuleName = 4;
    bytes Data = 5;
}

message NetworkPubSubMessage {
    string FromPeerID = 1;
    string Topic = 2;
    string ModuleName = 3;
    bytes Data = 4;
}
